# snake

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  sound.cpp  sound.h
